Fix Restore after Minimize on X11.

BUG=723986

Review-Url: https://codereview.chromium.org/2891893002
Cr-Commit-Position: refs/heads/master@{#474211}

Former-commit-id: dd8019cfb439f7ebdc135820179f1cfc5c810b45